--- a/src/index.njk
+++ b/src/index.njk
@@ -3,11 +3,15 @@ layout: base.njk
 title: Portfolio - Walter Moore
 ---
 <!-- Hero Section -->
-<section id="hero" class="bg-gradient-to-r from-minimal-secondary to-minimal-charcoal text-white py-16">
-  <div class="container mx-auto px-6 text-center">
-    <h2 class="text-4xl font-extrabold">Bridging Technology and Business</h2>
-    <p class="mt-4 text-lg">Entrepreneurial Engineer & Business Strategist. Leadership in SaaS, Innovation, & Client Solutions</p>
-    <a href="/contact" class="mt-6 inline-block bg-white text-minimal-primary px-6 py-3 rounded-xl shadow hover:bg-gray-100">Let's Connect</a>
+<section id="hero" class="bg-gradient-to-t from-minimal-charcoal to-minimal-primaryDark py-16">
+  <div class="container mx-auto px-6 text-center text-minimal-secondaryLight h-screen flex flex-col justify-center items-center">
+    <h2 class="text-4xl font-bold mb-16">Bridging Technology and Business</h2>
+    <div class="w-full flex flex-row justify-center">
+      <img src="/img/pfp.jpg" alt="Your Bio Picture" class="mb-8 w-48 h-48 border-4 border-minimal-secondaryLight rounded-full shadow-lg">
+    </div>
+    <h2 class="text-5xl font-extrabold mb-8">Walter Moore</h2>
+    <p class="w-full lg:w-1/3 text-xl font-bold mb-8">Entrepreneurial Engineer & Business Strategist. Leadership in SaaS, Innovation, & Client Solutions</p>
+    <a href="/contact" class="w-64 mt-6 border border-minimal-secondaryLight text-minimal-secondaryLight px-6 py-3 rounded-xl shadow hover:bg-gray-100">Let's Connect</a>
   </div>
 </section>
 
@@ -15,15 +19,13 @@ title: Portfolio - Walter Moore
 <section id="about" class="py-16">
   <div class="container mx-auto px-6">
     <h3 class="text-3xl font-bold text-center mb-8">About Me</h3>
-    <div class="w-full flex flex-row justify-center">
-      <img src="/img/pfp.jpg" alt="Your Bio Picture" class="w-48 h-48 rounded-full shadow-lg">
-    </div>
+    
     <div class="mt-10 flex flex-col gap-4 w-full">
       <p class="mt-4 text-lg text-justify">
           {{about.introduction}}
       </p>
-      <h3><span class="font-bold">LinkedIn: </span><a class="text-minimal-primary underline hover:text-minimal-blue" href="{{about['linked-in-url']}}" target="_blank">{{about['linked-in-url']}}</a></h3>
-      <h3><span class="font-bold">GitHub: </span><a class="text-minimal-primary underline hover:text-minimal-blue" href="{{about['github-url']}}" target="_blank">{{about['github-url']}}</a></h3>
+      <h3><span class="font-bold">LinkedIn: </span><a class="text-minimal-secondaryDark underline hover:text-minimal-primaryLight" href="{{about['linked-in-url']}}" target="_blank">{{about['linked-in-url']}}</a></h3>
+      <h3><span class="font-bold">GitHub: </span><a class="text-minimal-secondaryDark underline hover:text-minimal-primaryLight" href="{{about['github-url']}}" target="_blank">{{about['github-url']}}</a></h3>
     </div>
   </div>
 </section>
@@ -33,9 +35,9 @@ title: Portfolio - Walter Moore
   <div class="container mx-auto px-6">
     <h3 class="text-3xl font-bold text-center">LEARN MORE</h3>
     <div class="mt-10 grid gap-8 md:grid-cols-2 lg:grid-cols-3">
-      <div class="flex flex-col rounded-xl border border-2 h-full">
+      <div class="flex flex-col rounded-xl border border-2 border-minimal-primary dark:border-minimal-secondaryLight h-full">
         <a href="/experience" class="flex flex-col">
-          <img src="/img/experience.webp" alt="Project Image" class=" w-full aspect-square object-cover object-top rounded-t-xl">
+          <img src="/img/experience.webp" alt="Project Image" class=" w-full aspect-square object-cover object-top rounded-t-lg">
           <div class="grow shrink flex flex-col justify-between p-6">
             <div class="flex flex-row justify-center">
               <h4 class="text-xl font-bold mt-4">EXPERIENCE</h4>
@@ -43,9 +45,9 @@ title: Portfolio - Walter Moore
           </div>
         </a>
       </div>
-      <div class="flex flex-col rounded-xl border border-2 h-full">
+      <div class="flex flex-col rounded-xl border border-2 border-minimal-primary dark:border-minimal-secondaryLight h-full">
         <a href="/portfolio" class="flex flex-col">
-          <img src="/img/project.webp" alt="Project Image" class=" w-full aspect-square object-cover object-top rounded-t-xl">
+          <img src="/img/project.webp" alt="Project Image" class=" w-full aspect-square object-cover object-top rounded-t-lg">
           <div class="grow shrink flex flex-col justify-between p-6">
             <div class="flex flex-row justify-center">
               <h4 class="text-xl font-bold mt-4">PORTFOLIO</h4>
@@ -53,9 +55,9 @@ title: Portfolio - Walter Moore
           </div>
         </a>
       </div>
-      <div class="flex flex-col rounded-xl border border-2 h-full">
+      <div class="flex flex-col rounded-xl border border-2 border-minimal-primary dark:border-minimal-secondaryLight h-full">
         <a href="/contact" class="flex flex-col">
-          <img src="/img/contact.webp" alt="Project Image" class=" w-full aspect-square object-cover object-top rounded-t-xl">
+          <img src="/img/contact.webp" alt="Project Image" class=" w-full aspect-square object-cover object-top rounded-t-lg">
           <div class="grow shrink flex flex-col justify-between p-6">
             <div class="flex flex-row justify-center">
               <h4 class="text-xl font-bold mt-4">CONTACT</h4>
@@ -103,11 +105,15 @@ title: Portfolio - Walter Moore
     const isDarkMode = window.matchMedia("(prefers-color-scheme: dark)").matches || document.documentElement.classList.contains("dark");
     console.log("isDarkMode", isDarkMode)
     const textColor = isDarkMode
-      ? window.tailwindColors.white
-      : window.tailwindColors.black;
+      ? window.tailwindColors.secondaryLight
+      : window.tailwindColors.primaryDark;
+    const borderColor = isDarkMode
+      ? window.tailwindColors.secondaryDark
+      : window.tailwindColors.primaryLight;
     {# Chart.defaults.backgroundColor = '#9BD0F5';
     Chart.defaults.borderColor = '#36A2EB'; #}
     Chart.defaults.color = textColor;
+    Chart.defaults.borderColor = borderColor;
 </script>
 
 
