--- a/src/project.njk
+++ b/src/project.njk
@@ -87,7 +87,7 @@ pagination:
 
 <section id="about" class="mb-16">
   <div class="container mx-auto px-6">
-    <div class="prose dark:prose-invert mx-auto">
+    <div class="prose dark:prose-invert dark:text-minimal-secondaryLight mx-auto">
       {{ project.details | safe }}
     </div>
   </div>
