more styling improvements

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -20,9 +20,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
     <link rel="manifest" href="/img/site.webmanifest">
   </head>
-  <body class="text-minimal-primaryDark dark:text-minimal-secondaryLight bg-minimal-secondaryLight dark:bg-minimal-black">
+  <body class="text-minimal-primaryDark dark:text-minimal-secondaryLight bg-minimal-lightgray dark:bg-minimal-black">
     <!-- Header -->
-    <header class=" bg-minimal-secondaryLight dark:bg-minimal-black shadow sticky top-0 z-50">
+    <header class=" bg-minimal-lightgray dark:bg-minimal-black shadow sticky top-0 z-50">
       <div class="container mx-auto px-6 py-4 flex justify-between items-center">
         <a href="/">
           <img src="/img/waltermoore.png" alt="{{ project.title }}" class="w-64"/>
