--- a/src/company.njk
+++ b/src/company.njk
@@ -13,11 +13,11 @@ pagination:
     <h3 class="text-3xl font-bold text-center mb-8">{{ company.name }}</h3>
     <div class="flex flex-col md:flex-row justify-center items-center mb-8">
       <img 
-        class="bg-minimal-white w-96 p-8 rounded-xl"
+        class="bg-minimal-white w-96 p-8 rounded-xl border-2 border-minimal-primary dark:border-minimal-secondaryLight shadow-lg"
         src="/img/{{ company.image }}"/>
     </div>
     <h3 class="text-3xl font-bold text-center mb-32">{{ company.location }}</h3>
-    <div class="flex flex-row items-stretch gap-8 rounded-xl border border-gray-200 shadow-lg">
+    <div class="flex flex-row items-stretch gap-8 rounded-xl border-2 border-minimal-primary dark:border-minimal-secondaryLight  shadow-lg">
       <!-- Details Section -->
       <div class="grow p-4">
         <h4 class="text-2xl font-semibold">{{ company.title }}</h4>
@@ -27,7 +27,7 @@ pagination:
       <!-- Image Section -->
       <div class="flex flex-col" >
         <!-- PFP Image -->
-        <img src="/img/pfp.jpg" alt="{{ project.title }}" class="aspect-square rounded-r-xl border-2 border-gray-200 shadow-lg"> 
+        <img src="/img/pfp.jpg" alt="{{ project.title }}" class="aspect-square rounded-r-lg shadow-lg"> 
      </div>
     </div>
   </div>
@@ -40,7 +40,7 @@ pagination:
     <div class="mt-10 grid gap-8 md:grid-cols-2 lg:grid-cols-3">
       {% for project in portfolio | filterByCompany(company.slug) %}
       
-      <div class="flex flex-col rounded-xl border border-2 h-full">
+      <div class="flex flex-col rounded-xl border-2 border-minimal-primary dark:border-minimal-secondaryLight h-full">
         <a href="/projects/{{project['project-slug']}}/" class="flex flex-col h-full">
           <img src="/projects/{{project['project-slug']}}/img/{{project.image}}" alt="Project Image" class="w-full h-64 object-cover object-top rounded-t-xl">
           <div class="grow shrink flex flex-col justify-between p-6">
