more styling improvements

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -81,9 +81,10 @@
 
         // Loop through each link and check if it matches the current path
         navLinks.forEach(link => {
-          //console.log(`currentPath=${currentPath}, href=${link.getAttribute("href")}`)
           if ( currentPath.slice(0,-1) === link.getAttribute("href") || currentPath === link.getAttribute("href") ) {
-            link.classList.add("underline text-minimal-secondaryLight dark:text-minimal-primary");
+            link.classList.add("underline");
+            link.classList.add("text-minimal-secondary");
+            link.classList.add("dark:text-minimal-primary");
           }
         });
       });
