--- a/src/index.njk
+++ b/src/index.njk
@@ -3,7 +3,7 @@ layout: base.njk
 title: Portfolio - Walter Moore
 ---
 <!-- Hero Section -->
-<section id="hero" class="bg-gradient-to-t from-minimal-charcoal to-minimal-primaryDark py-16">
+<section id="hero" class="bg-gradient-to-t from-minimal-black to-minimal-primaryDark py-16">
   <div class="container mx-auto px-6 text-center text-minimal-secondaryLight h-screen flex flex-col justify-center items-center">
     <h2 class="text-4xl font-bold mb-16">Bridging Technology and Business</h2>
     <div class="w-full flex flex-row justify-center">
