added link preview meta

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -10,9 +10,29 @@
 
       gtag('config', 'G-YVTDX8FV3W');
     </script>
+
+    <!-- HTML Meta Tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <title>Portfolio - Walter Moore</title>
     <meta name="description" content="The portfolio site for Walter Moore.">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://waltermoore.me">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Portfolio - Walter Moore">
+    <meta property="og:description" content="The portfolio site for Walter Moore.">
+    <meta property="og:image" content="/img/pfp.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="waltermoore.me">
+    <meta property="twitter:url" content="https://waltermoore.me">
+    <meta name="twitter:title" content="Portfolio - Walter Moore">
+    <meta name="twitter:description" content="The portfolio site for Walter Moore.">
+    <meta name="twitter:image" content="/img/pfp.jpg">
+
     <title>{{ title }}</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
