added og specific image

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -23,7 +23,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Portfolio - Walter Moore">
     <meta property="og:description" content="The portfolio site for Walter Moore.">
-    <meta property="og:image" content="/img/pfp.jpg">
+    <meta property="og:image" content="/img/waltermoore-og.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
@@ -31,7 +31,7 @@
     <meta property="twitter:url" content="https://waltermoore.me">
     <meta name="twitter:title" content="Portfolio - Walter Moore">
     <meta name="twitter:description" content="The portfolio site for Walter Moore.">
-    <meta name="twitter:image" content="/img/pfp.jpg">
+    <meta name="twitter:image" content="/img/waltermoore-og.png">
 
     <title>{{ title }}</title>
     <link rel="stylesheet" href="/css/styles.css">
