added theme colors to meta

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -17,7 +17,9 @@
     
     <title>Portfolio - Walter Moore</title>
     <meta name="description" content="The portfolio site for Walter Moore.">
-
+    <meta name="theme-color" content="{{tailwindLightThemeColor}}" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="{{tailwindDarkThemeColor}}" media="(prefers-color-scheme: dark)">
+    
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://waltermoore.me">
     <meta property="og:type" content="website">
