--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -64,7 +64,7 @@
         <!-- Navigation -->
         <nav 
           id="nav-menu" 
-          class="hidden lg:block absolute top-full left-0 lg:static lg:flex w-full lg:w-auto bg-minimal-secondaryLight dark:bg-minimal-black lg:bg-transparent border-t-2 lg:border-t-0 shadow-md lg:shadow-none"
+          class="hidden lg:block absolute top-full left-0 lg:static lg:flex w-full lg:w-auto bg-minimal-lightgray dark:bg-minimal-black lg:bg-transparent border-t-2 lg:border-t-0 shadow-md lg:shadow-none"
         >
           <ul class="w-[250px] mx-auto my-8 lg:my-0 lg:w-auto lg:mx-0 flex flex-col lg:flex-row items-center lg:space-x-6">
             <li><a href="/" class="nav-link block px-6 py-2 hover:text-minimal-primary">About</a></li>
