--- a/src/company.njk
+++ b/src/company.njk
@@ -8,7 +8,7 @@ pagination:
   alias: company
 ---
 
-<section id="about" class="py-16">
+<section id="about" class="my-16">
   <div class="container mx-auto px-6">
     <h3 class="text-3xl font-bold text-center mb-8">{{ company.name }}</h3>
     <div class="flex flex-col md:flex-row justify-center items-center mb-8">
@@ -16,7 +16,7 @@ pagination:
         class="bg-minimal-white w-96 p-8 rounded-xl border-2 border-minimal-primary dark:border-minimal-secondaryLight shadow-lg"
         src="/img/{{ company.image }}"/>
     </div>
-    <h3 class="text-3xl font-bold text-center mb-32">{{ company.location }}</h3>
+    <h3 class="text-3xl font-bold text-center mb-16">{{ company.location }}</h3>
     <div class="flex flex-row items-stretch gap-8 rounded-xl border-2 border-minimal-primary dark:border-minimal-secondaryLight  shadow-lg">
       <!-- Details Section -->
       <div class="grow p-4">
@@ -34,24 +34,22 @@ pagination:
 </section>
 
 <!-- Portfolio Section -->
-<section id="projects" class="py-16">
+<section id="projects" class="mb-16">
   <div class="container mx-auto px-6">
-    <h3 class="text-3xl font-bold text-center">Sample Projects</h3>
-    <div class="mt-10 grid gap-8 md:grid-cols-2 lg:grid-cols-3">
+    <h3 class="text-3xl font-bold text-center mb-16">Sample Projects</h3>
+    <div class="grid gap-8 grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
       {% for project in portfolio | filterByCompany(company.slug) %}
       
       <div class="flex flex-col rounded-xl border-2 border-minimal-primary dark:border-minimal-secondaryLight h-full">
         <a href="/projects/{{project['project-slug']}}/" class="flex flex-col h-full">
           <img src="/projects/{{project['project-slug']}}/img/{{project.image}}" alt="Project Image" class="w-full h-64 object-cover object-top rounded-t-xl">
-          <div class="grow shrink flex flex-col justify-between p-6">
-            <div>
-              <h4 class="text-xl font-bold mt-4">{{project.title}}</h4>
-              <p class="line-clamp-4 mt-2">{{project.description}}</p>
-            </div>
-            <div class="mt-4 flex flex-wrap-reverse gap-2 justify-end items-end">
-              {% for skill in project.skills %}
-              <span class="px-3 py-1 text-sm bg-minimal-blue text-minimal-blueDark rounded-full">{{skill}}</span>
-              {% endfor %}
+          <div class="grow shrink flex flex-col justify-between p-4">
+            <h4 class="text-xl font-bold truncate">{{project.title}}</h4>
+            {# <p class="line-clamp-4 mt-2">{{project.description}}</p> #}
+            <div class="mt-4 flex flex-wrap">
+              <h2 class="mr-4 mb-2">Skills: <span class="px-3 py-1 text-sm bg-minimal-blue text-minimal-blueDark rounded-full">{{project.skills.length}}</span></h2>
+              <h2 class="mr-4 mb-2">Languages: <span class="px-3 py-1 text-sm bg-minimal-green text-minimal-greenDark rounded-full">{{project.languages.length}}</span></h2>
+              <h2 class="mr-4 mb-2">Tools: <span class="px-3 py-1 text-sm bg-minimal-yellow text-minimal-yellowDark rounded-full">{{project.tools.length}}</span></h2>
             </div>
           </div>
         </a>
