--- a/src/index.njk
+++ b/src/index.njk
@@ -3,7 +3,7 @@ layout: base.njk
 title: Portfolio - Walter Moore
 ---
 <!-- Hero Section -->
-<section id="hero" class="bg-gradient-to-t from-minimal-black to-minimal-primaryDark py-16">
+<section id="hero" class="bg-gradient-to-t from-minimal-black to-minimal-primaryDark">
   <div class="container mx-auto px-6 text-center text-minimal-secondaryLight h-screen flex flex-col justify-center items-center">
     <h2 class="text-4xl font-bold mb-16">Bridging Technology and Business</h2>
     <div class="w-full flex flex-row justify-center">
@@ -16,7 +16,7 @@ title: Portfolio - Walter Moore
 </section>
 
 <!-- About Section -->
-<section id="about" class="py-16">
+<section id="about" class="my-16">
   <div class="container mx-auto px-6">
     <h3 class="text-3xl font-bold text-center mb-8">About Me</h3>
     
@@ -31,7 +31,7 @@ title: Portfolio - Walter Moore
 </section>
 
 <!-- Navigation Section -->
-<section id="projects" class="py-16">
+<section id="projects" class="mb-16">
   <div class="container mx-auto px-6">
     <h3 class="text-3xl font-bold text-center">LEARN MORE</h3>
     <div class="mt-10 grid gap-8 md:grid-cols-2 lg:grid-cols-3">
@@ -69,7 +69,7 @@ title: Portfolio - Walter Moore
   </div>
 </section>
 
-<section id="skill-chart" class="py-16">
+<section id="skill-chart" class="mb-16">
   <div class="container mx-auto px-6">
     <h2 class="text-2xl text-center font-bold">Project Count By Skill</h2>
     <div class="chart-container w-full max-w-5xl h-[500px] mx-auto">
@@ -78,7 +78,7 @@ title: Portfolio - Walter Moore
   </div>
 </section>
 
-<section id="tool-chart" class="py-16">
+<section id="tool-chart" class="mb-16">
   <div class="container mx-auto px-6">
     <h2 class="text-2xl text-center font-bold">Project Count By Tool</h2>
     <div class="chart-container w-full max-w-5xl h-[800px] mx-auto">
@@ -87,7 +87,7 @@ title: Portfolio - Walter Moore
   </div>
 </section>
 
-<section id="language-chart" class="py-16">
+<section id="language-chart" class="mb-16">
   <div class="container mx-auto px-6">
     <h2 class="text-2xl text-center font-bold">Project Count By Language</h2>
     <div class="chart-container w-full max-w-5xl h-[500px] mx-auto">
