--- a/src/project.njk
+++ b/src/project.njk
@@ -10,9 +10,9 @@ pagination:
 
 {% set company = project['company-slug'] | findCompany(companies) %}
 <section id="about" class="py-16">
-  <div class="container mx-auto px-6 flex flex-col gap-8">
-    <h3 class="text-3xl font-bold text-center mb-8">{{ project.title }}</h3>
-    <div class="flex flex-col md:flex-row justify-center items-center gap-8 mb-32">
+  <div class="container mx-auto px-6 flex flex-col gap-16">
+    <h3 class="text-3xl font-bold text-center">{{ project.title }}</h3>
+    <div class="flex flex-col md:flex-row justify-center items-center gap-8">
       <!-- PFP Image -->
       <img src="/img/pfp.jpg" alt="{{ project.title }}" class="w-24 h-24 rounded-full border-2 border-minimal-primary dark:border-minimal-secondaryLight shadow-lg">
       <h1 class="text-3xl">+</h1>
