--- a/src/portfolio.njk
+++ b/src/portfolio.njk
@@ -21,7 +21,7 @@ title: Portfolio - Walter Moore
 <!-- Portfolio Section -->
 <section id="projects" class="mb-16">
   <div class="container mx-auto px-6">
-    <div class="grid gap-8 grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
+    <div class="grid gap-4 lg:gap-8 grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
       {% for project in portfolio %}
       
       <div class="flex flex-col rounded-xl border border-2 border-minimal-primary dark:border-minimal-secondaryLight h-full">
@@ -29,7 +29,7 @@ title: Portfolio - Walter Moore
           <img src="/projects/{{project['project-slug']}}/img/{{project.image}}" alt="Project Image" class=" w-full aspect-square object-cover rounded-t-lg">
           <div class="grow shrink flex flex-col justify-between p-4">
             <div>
-              <h4 class="text-lg truncate font-bold">{{project.title}}</h4>
+              <h4 class="md:text-lg truncate font-bold">{{project.title}}</h4>
               {# <p class="line-clamp-4 mt-2 text-justify">{{project.description}}</p> #}
             </div>
             <div class="mt-4 flex flex-wrap">
